refactor: One dot per line