@@ -4,16 +4,9 @@ import people.Person;
 import people.Pet;
 import people.PetType;
 
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Map;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
-import static java.lang.Integer.MAX_VALUE;
-import static java.lang.String.format;
-import static java.lang.System.lineSeparator;
 import static org.assertj.core.api.Assertions.assertThat;
 
 class PopulationTests {
@@ -21,7 +14,7 @@ class PopulationTests {
 
     @BeforeAll
     static void setup() {
-        population = Arrays.asList(
+        population = List.of(
                 new Person("Peter", "Griffin")
                         .addPet(PetType.CAT, "Tabby", 2),
                 new Person("Stewie", "Griffin")
@@ -44,9 +37,17 @@ class PopulationTests {
 
     @Test
     void whoOwnsTheYoungestPet() {
-        var filtered = population.stream().min(Comparator.comparingInt(person -> person.pets().stream().mapToInt(Pet::age).min().orElse(Integer.MAX_VALUE))).orElse(null);
+        var filtered = population.stream()
+                .min(Comparator.comparingInt(
+                        person -> person.pets()
+                                .stream()
+                                .mapToInt(Pet::age)
+                                .min()
+                                .orElse(Integer.MAX_VALUE))
+                ).orElse(null);
 
         assert filtered != null;
-        assertThat(filtered.firstName()).isEqualTo("Lois");
+        assertThat(filtered.firstName())
+                .isEqualTo("Lois");
     }
 }
